--- a/style.css
+++ b/style.css
@@ -90,6 +90,22 @@ header button{
     display: block;
 }
 
+.burger-menu
+{
+    display: none;
+    height: 0; 
+    opacity: 0;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    background: #FFF1DA;
+    transition: all 0.3s linear;
+}
+.burger-menu.open{
+    opacity: 1;
+    height: 300px;
+    padding: 90px 0;
+}
 
 @media screen and (max-width: 1200px) {
     .header__logo{
@@ -130,6 +146,10 @@ header button{
         from {color:#FFF1DA}
         to {color:#737373}
     }
+
+    .burger-toggle{
+        background-color: transparent;
+    }
     header .container{
         width: 100%;
         background-color: #FFF1DA;
@@ -143,14 +163,9 @@ header button{
     .top-nav{
         display: none;
     }
-    .burger-menu
-    {
-        display: flex; 
-        padding: 90px 0;
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-        background: #FFF1DA;
+    .burger-menu{
+        display: flex;
+        opacity: 0;
     }
     .burger-menu li a{
         text-decoration: none;
@@ -183,9 +198,70 @@ header button{
 /* END HEADER */
 
 /* HERO CONTENT */
-main img{
-    width: 50px;
-    height: auto;
+
+main{
+    display: flex;
+    flex-direction: row;
+    padding-right: 30px;
+}
+
+.hero__content > p:nth-of-type(1)
+{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    text-transform: uppercase;
+    color: #DF6951;
+}
+
+.hero__content > h1:nth-of-type(1)
+{
+    font-family: 'Volkhov';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 84px;
+    line-height: 106%;
+    letter-spacing: -0.04em;
+    color: #181E4B;
+
+}
+
+.hero__content > p:nth-of-type(2)
+{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 188%;
+    /* or 188% */
+
+
+    color: #5E6282;
+}
+.hero__content-btns > button:nth-of-type(1){
+    background: #F1A501;
+    box-shadow: 0px 20px 35px rgba(241, 165, 1, 0.15);
+    border-radius: 10px;
+    border: none;
+    width: 170px;
+    height: 60px;
+    font-family: 'Google Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 23px;
+    /* identical to box height */
+
+    text-align: center;
+
+    /* white */
+
+    color: #FFFFFF;
+}
+main > img{
+    width: 100%;
 }
 /* END HERO CONTENT */
 
