--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-body{
-    background-image: url(img/Decore.png);
-    background-repeat: no-repeat;
-    background-position: top right;
-    background-size: 48%;
-}
+
 
 /* HEADER */
 header{
     display: flex;
     flex-direction: column;
+}
+.container > img:nth-of-type(1){
+    position: absolute;
+    width: 48%;
+    height: auto;
+    top: 0%;
+    right: 0%;
+    z-index: -2;
 }
 header .container{
     display: flex;
@@ -139,8 +142,8 @@ header button{
 
 }
 @media screen and (max-width: 768px) {
-    body{
-        background: none;
+    .container > img:nth-of-type(1){
+        display: none;
     }
     @keyframes mobile {
         from {color:#FFF1DA}
@@ -202,9 +205,16 @@ header button{
 main{
     display: flex;
     flex-direction: row;
-    padding-right: 30px;
+    align-items: center;
+    
 }
 
+.hero__content{
+    margin-left: 7%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 .hero__content > p:nth-of-type(1)
 {
     font-family: 'Poppins';
@@ -240,6 +250,12 @@ main{
 
     color: #5E6282;
 }
+
+.hero__content-btns{
+    display: flex;
+    gap: 40px;
+}
+
 .hero__content-btns > button:nth-of-type(1){
     background: #F1A501;
     box-shadow: 0px 20px 35px rgba(241, 165, 1, 0.15);
@@ -247,26 +263,382 @@ main{
     border: none;
     width: 170px;
     height: 60px;
-    font-family: 'Google Sans';
-    font-style: normal;
+    font-family: 'Open Sans';
     font-weight: 500;
     font-size: 18px;
     line-height: 23px;
-    /* identical to box height */
-
     text-align: center;
-
-    /* white */
-
     color: #FFFFFF;
+    transition: all 0.1s ease;
+
 }
-main > img{
-    width: 100%;
+
+.hero__content-btns > button:nth-of-type(1):hover{
+    scale: 110%;
+    border: 5px solid #F1A501;
+    background-color: transparent;
+    color: #DF6951;
+    font-weight:bold;
+}
+
+.hero__content-btns-play-demo{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.hero__content-btns-play-demo > button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DF6951;
+    border-style: none;
+    border-radius: 30px;
+    width: 52px;
+    height: 52px;
+    box-shadow: 0px 15px 30px rgba(223, 105, 81, 0.3);
+    transition: all 0.1s ease-out;
+}
+
+.hero__content-btns-play-demo > button:hover{
+    scale: 110%;
+}
+
+.hero__content-btns-play-demo > p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 26px;
+    color: #686D77;
+}
+
+@keyframes fly {
+    50%{
+        transform: translateX(300%) translateY(-300%);
+    }
+    to{
+        transform: translateX(0%) translateY(0%);
+    }
+}
+main > img:nth-of-type(1){
+    position: absolute;
+    top: 20%;
+    right: 40%;
+    transition: 0.3s;
+}
+
+main > img:nth-of-type(1):hover{
+
+    animation-name: fly;
+    animation-duration: 3s;
+}
+
+main > img:nth-of-type(2){
+    position: absolute;
+    top: 30%;
+    right: 0.5%;
+    z-index: -1;
+    rotate: -5deg;
+}
+main > img:nth-of-type(3){
+    width: 70%;
+    height: auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .hero__content{
+        gap: 15px;
+    }
+
+    .hero__content > p:nth-of-type(1){
+        font-size: 14px;
+    }
+
+    .hero__content > h1:nth-of-type(1){
+        font-size: 50px;
+    }
+
+    .hero__content > p:nth-of-type(2){
+        font-size: 12px;
+    }
+
+    .hero__content-btns > button{
+        font-size: 10px;
+    }
+
+    .hero__content-btns-play-demo > p{
+        font-size: 15px;
+    }
+
+    main > img:nth-of-type(1){
+        width: 12%;
+        height: auto;
+    }
+
+    main > img:nth-of-type(2){
+        width: 12%;
+        height: auto;
+    }
+    main > img:nth-of-type(3)
+    {
+        width: 50%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 768px){
+    main{
+        position: relative;
+    }
+
+    .hero__content{
+        margin-top: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero__content::after{
+        content: '';
+        background-image: url(img/squares.svg);
+        background-repeat: no-repeat;
+        width: 20%;
+        height: 100%;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        z-index: -2;
+    }
+    .hero__content > h1{
+        text-align: center;
+        line-height: 180%;
+    }
+    .hero__content > p:nth-of-type(1){
+        display: none;
+    }
+
+    .hero__content > p:nth-of-type(2){
+        display: none;
+    }
+
+    .hero__content-btns{
+        flex-direction: column;
+    }
+
+    main > img:nth-of-type(1)
+    {
+        width: 150px;
+        left: -5%;
+        top: -5%;
+    }
+    main > img:nth-of-type(2)
+    {
+        display: none;
+    }
+
+    main > img:nth-of-type(3)
+    {
+        display: none;
+    }
 }
 /* END HERO CONTENT */
 
 /* SERVICES */
+    .services{
+        position: relative;
+    }
+    .services__categories::after{
+        content: '';
+        background-image: url(img/squares.svg);
+        background-repeat: no-repeat;
+        width: 10%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 10%;
+        z-index: -1;
+    }
+    .services > p:nth-of-type(1){
+        font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    /* identical to box height */
 
+    text-align: center;
+    color: #5E6282;
+    }
+
+    .services > h1:nth-of-type(1){
+        font-family: 'Volkhov';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 64px;
+    /* identical to box height */
+
+    text-transform: capitalize;
+    text-align: center;
+    color: #14183E;
+    }
+    .services__categories{
+        display: flex;
+        gap: 7%;
+        margin: 60px 7% 120px 7%;
+
+    }
+    .services__categories-item{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: #FFFFFF;
+        border-radius: 36px;
+        gap: 10px;
+        padding: 40px 40px 45px 40px;
+        transition: all 0.3s ease;
+    }
+
+    .services__categories-item:hover{
+        box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.02), 0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0151852), 0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0121481), 0px 20px 13px rgba(0, 0, 0, 0.01), 0px 8.14815px 6.51852px rgba(0, 0, 0, 0.00785185), 0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00481481);
+        border-radius: 36px;
+        padding: 60px 45px 65px 45px;
+    }
+
+    .services__categories-item:hover > .services__categories-item-block{
+        display: block;
+    }
+
+    .services__categories-item-block{
+        transition: all 0.3s ease;
+        display: none;
+        width: 100px;
+        height: 100px;
+        background: #DF6951;
+        border-radius: 30px 0px 10px;
+        position: absolute;
+        bottom: -10%;
+        left: -10%;
+        z-index: -1;
+    }
+    
+    .services__categories-item > img{
+        width: 100px;
+        height: 70px;
+        object-fit: fill;
+    }
+    .services__categories-item > p:nth-of-type(1){
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 27px;
+        text-align: center;
+        /* text heading color */
+
+        color: #1E1D4C;
+    }
+
+    .services__categories-item > p:nth-of-type(2){
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 162%;
+        text-align: center;
+        color: #5E6282;
+    }
+
+    @media screen and (max-width: 1200px) {
+
+        .services > p:nth-of-type(1){
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        .services > h1:nth-of-type(1){
+            font-size: 35px;
+            line-height: 50px;
+        }
+        .services__categories{
+            gap: 5%;
+        }
+
+        .services__categories-item{
+            gap: 7px;
+            padding: 30px 30px 35px 30px;
+        }
+
+        .services__categories-item:hover{
+            padding: 50px 35px 55px 35px;
+        }
+
+        .services__categories-item-block{
+            width: 60px;
+            height: 60px;
+            border-radius: 20px 0px 7px;
+        }
+
+        .services__categories-item > img{
+            width: 70px;
+            height: 50px;
+        }
+
+        .services__categories-item > p:nth-of-type(1){
+            font-size: 15px;
+            line-height: 22px;
+        }
+
+        .services__categories-item > p:nth-of-type(2){
+            font-size: 12px;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .services{
+            padding-top: 90px;
+        }
+        .services__categories{
+            flex-direction: column;
+            gap: 40px;
+        }
+
+        .services__categories::after{
+            display: none;
+        }
+ 
+
+        .services__categories-item-block{
+            width: 60px;
+            height: 60px;
+            border-radius: 20px 0px 7px;
+        }
+
+        .services__categories-item > img{
+            width: 100px;
+            height: 70px;
+        }
+
+        .services__categories-item > p:nth-of-type(1){
+            font-size: 18px;
+            line-height: 25px;
+        }
+
+        .services__categories-item > p:nth-of-type(2){
+            font-size: 14px;
+        }
+
+        .services__categories-item{
+            margin: 0 20%;
+        }
+        .services__categories-item:nth-of-type(3){
+            display: none;
+        }
+        .services__categories-item:nth-of-type(4){
+            display: none;
+        }
+    }
 /* END SERVICES */
 
 /* DESTINATION */
